--- a/Pregunta2/style.css
+++ b/Pregunta2/style.css
@@ -33,7 +33,7 @@
   .side {
     margin-top:10px;
     margin-right:10px;
-    width:216px; 
+    width:700px; 
     float:left;
     background-color: 12AAFF;
     color: E8E8E8;
@@ -46,4 +46,11 @@
   width:880px;
   padding-left: 10px;
   color: E8E8E8;
+}
+
+.footer {
+  margin:10px;
+  height:50px;
+  float:left;
+  width:880px;
 }
